--- a/views/attack.erb
+++ b/views/attack.erb
@@ -1,1 +1,3 @@
-<h1> <%= @player1_name %> attacked <%= @player2_name %> </h1>
+<h1> <%= @player1.name %> attacked <%= @player2.name %> </h1>
+
+<a href='/play'>OK</a>
