--- a/views/play.erb
+++ b/views/play.erb
@@ -1,8 +1,8 @@
-<h1> <%= @player1_name %> vs. <%= @player2_name %> </h1>
+<h1> <%= @player1.name %> vs. <%= @player2.name %> </h1>
 
 <div class="hp">
-  <h2> <%= @player1_name %> HP: 60 </h2>
-  <h2> <%= @player2_name %> HP: 60 </h2>
+  <h2> <%= @player1.name %> HP: <%= @player1.hit_points %> </h2>
+  <h2> <%= @player2.name %> HP: <%= @player1.hit_points %> </h2>
 </div>
 
 
